temp/nginx-boris/complete-example/cafe-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: nginx-ingress
  name: cafe-ingress
spec:
  tls:
  - hosts:
    - mylb-1.nginx-ingress.svc.solutions.eng.diamanti.com
    secretName: cafe-secret
  rules:
  - host: mylb-1.nginx-ingress.svc.solutions.eng.diamanti.com
    http:
      paths:
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
